--- a/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
+++ b/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
@@ -1,71 +1,60 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿@import url('https://fonts.googleapis.com/css?family=Yantramanav:300');
+@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+.body {
+    background-color: black;
 }
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+.mainlanding {    
+    height: 125vh;
+    background-color: black;
 }
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+@media only screen and (max-width: 820px) {
+    .mainlanding {
+        height: 200vh;
+    } 
 }
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.maincontainer {
+    width: 100%;
 }
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.mainfooter {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    min-height: 70px;
+    background-color: #181819;    
+    color: #EEE7E3;
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 18px;    
+    padding: 20px;
+    z-index: 5;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
+/*Not Found View*/
+.notfounddiv {
+    background-image: url("../images/notfound.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100% 100%;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.t404 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 63px;
+    color: white;
+    padding-top: 50px;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.t4042 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 23px;
+    color: white;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+.t4043 {
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 23px;
+    color: white;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
-}
+/*Not Found View*/
