--- a/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
+++ b/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="mainlanding">
     <div class="container">
-        <h1 class="white-text">>The game site is under development</h1>
+        <h1 class="white-text">The game site is under development</h1>
         <h4 class="white-text">https://themastermind.azurewebsites.net/</h4>
     </div>
 </div>
