--- a/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
+++ b/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
@@ -1,60 +1,207 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Yantramanav:300');
-@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
 
-.body {
+body {
+    background: black;
+    /* background: url("./animal-ape-black.jpg");
+     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;  */
+}
+
+.siteheader {
+    margin-top: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    color: lightgreen;
+    font-size: 28px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.gamecontainer {
+    margin-top: 30px;
+    padding: 10px;
+    min-width: 150px;
+    max-width: 700px;
+    min-height: 120vh;
+    margin-left: auto;
+    margin-right: auto;
+    background: black;
+}
+
+.btn {
     background-color: black;
+    color: lightgreen;
+    min-width: 18%;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    text-transform: lowercase;
 }
-.mainlanding {    
-    height: 125vh;
+
+    .btn:hover {
+        background-color: lightgreen;
+        color: black;
+        min-width: 18%;
+    }
+
+.gametable {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.gametablerow {
+    text-align: center;
+    border: solid thin lightgreen;
+}
+
+.helptext {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
+}
+
+.levelindicator {
+    font-family: 'Courier New', Courier, monospace;
+    color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.keycontainer {
+    background: rgb(8, 160, 8);
+    max-width: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+.palletecontainer {
+    margin-top: 20px;
+}
+
+.modal {
+    max-width: 450px !important;
+}
+
+.modalstyle {
+    background: lightgreen;
+}
+
+
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(116, 109, 109);
+    border: solid thin lightgreen;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotInactive {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(116, 109, 109);    
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotKey {
+    height: 10px;
+    width: 10px;
+    background-color: rgb(8, 160, 8);
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.dotKeyBlack {
+    height: 10px;
+    width: 10px;
     background-color: black;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
 }
-@media only screen and (max-width: 820px) {
-    .mainlanding {
-        height: 200vh;
-    } 
+
+.dotKeyWhite {
+    height: 10px;
+    width: 10px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
 }
-.maincontainer {
-    width: 100%;
+
+.dotWhite {
+    height: 25px;
+    width: 25px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
 }
+
+.dotPurple {
+    height: 25px;
+    width: 25px;
+    background-color: purple;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotYellow {
+    height: 25px;
+    width: 25px;
+    background-color: yellow;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotGreen {
+    height: 25px;
+    width: 25px;
+    background-color: green;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotRed {
+    height: 25px;
+    width: 25px;
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.dotBlue {
+    height: 25px;
+    width: 25px;
+    background-color: blue;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 30px;
+}
+
+
+
 .mainfooter {
     position: fixed;
     text-align: center;
     bottom: 0;
     width: 100%;
     min-height: 70px;
-    background-color: #181819;    
-    color: #EEE7E3;
-    font-family: 'Yantramanav', sans-serif;
-    font-size: 18px;    
+    background-color: #181819;
+    font-family: 'Courier New', Courier, monospace;
+    color: lightgreen;
+    font-size: 18px;
     padding: 20px;
     z-index: 5;
 }
-
-/*Not Found View*/
-.notfounddiv {
-    background-image: url("../images/notfound.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100% 100%;
-}
-.t404 {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 63px;
-    color: white;
-    padding-top: 50px;
-}
-
-.t4042 {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 23px;
-    color: white;
-}
-
-.t4043 {
-    font-family: 'Yantramanav', sans-serif;
-    font-size: 23px;
-    color: white;
-    margin-top: 25px;
-    margin-bottom: 25px;
-}
-/*Not Found View*/
