--- a/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
+++ b/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@using MasterMind.Data
 @model Game
 @{
-    int currLevel = Model.Patterns.Count();   
+    int currLevel = Model.Patterns.Count();
+    bool completed = Model.IsCompleted || currLevel > 8;
 }
 
 <div class="siteheader">let's play master mind ..</div>
@@ -11,7 +12,7 @@
 
     <div class="container">
 
-        <a class="waves-effect waves-light btn"><i class="material-icons left">add</i>New Game</a>
+        <a class="waves-effect waves-light btn" href="/" onclick='YNconfirm(this,event)'><i class="material-icons left">add</i>New Game</a>
         <a class="waves-effect waves-light btn right" onclick="clearcodes()"><i class="material-icons left">clear_all</i>Clear All</a>
 
         <div id="modal1" class="modal">
@@ -42,7 +43,7 @@
                 @for (int i = 8; i > 0; i--)
                 {
                     if (i > currLevel ||
-                        (i == currLevel && Model.IsCompleted))
+                        (i==currLevel && completed))
                     {
                         <tr class="gametablerow">
                             <td style="width: 60px; text-align: center;">
@@ -60,7 +61,7 @@
                             </td>
                         </tr>
                     }
-                    else if (i == currLevel && !Model.IsCompleted)
+                    else if (i == currLevel && !completed)
                     {
                         <tr class="gametablerow">
                             <td style="width: 60px; text-align: center;">
@@ -102,7 +103,7 @@
                                     <span class=@cls></span>
                                     cls = $"dot{pattern.CodePeg4.ToString()}";
                                     <span class=@cls></span>
-                                }                                
+                                }
                             </td>
 
                             <td style="width:30px; text-align: center;">
@@ -110,42 +111,48 @@
                                     <div>
                                         @{
                                             string key = string.Empty;
-                                            key = (pattern.KeyPeg1!=MasterMind.KeyPeg.None)?$"dotKey{pattern.KeyPeg1}":"dotKey";
+                                            key = (pattern.KeyPeg1 != MasterMind.KeyPeg.None) ? $"dotKey{pattern.KeyPeg1}" : "dotKey";
                                             <span class=@key></span>
-                                            key = (pattern.KeyPeg2!=MasterMind.KeyPeg.None)?$"dotKey{pattern.KeyPeg2}":"dotKey";
+                                            key = (pattern.KeyPeg2 != MasterMind.KeyPeg.None) ? $"dotKey{pattern.KeyPeg2}" : "dotKey";
                                             <span class=@key></span>
-                                        }                                        
+                                        }
                                     </div>
                                     <div>
                                         @{
-                                            key = (pattern.KeyPeg3!=MasterMind.KeyPeg.None)?$"dotKey{pattern.KeyPeg3}":"dotKey";
+                                            key = (pattern.KeyPeg3 != MasterMind.KeyPeg.None) ? $"dotKey{pattern.KeyPeg3}" : "dotKey";
                                             <span class=@key></span>
-                                            key = (pattern.KeyPeg4!=MasterMind.KeyPeg.None)?$"dotKey{pattern.KeyPeg4}":"dotKey";
+                                            key = (pattern.KeyPeg4 != MasterMind.KeyPeg.None) ? $"dotKey{pattern.KeyPeg4}" : "dotKey";
                                             <span class=@key></span>
                                         }
                                     </div>
                                 </div>
                             </td>
                         </tr>
-                        }
+                    }
                 }
 
             </table>
         </div>
 
-        </div>
-
     </div>
 
-<div class="submitdiv" style="display: none;">
-    <form id="codeform" action="/" method="POST">
-        <input type="hidden" name="guid" id="guid" value="@Model.Guid">
-        <input type="text" name="codepeg1" id="codepeg1">
-        <input type="text" name="codepeg2" id="codepeg2">
-        <input type="text" name="codepeg3" id="codepeg3">
-        <input type="text" name="codepeg4" id="codepeg4">
-    </form>
 </div>
+
+@if (!completed)
+{
+    <div class="submitdiv" style="display: none;">
+        <form id="codeform" action="/" method="POST">
+            @Html.AntiForgeryToken()
+            <input type="hidden" name="guid" id="guid" value="@Model.Guid">
+            <input type="hidden" name="level" id="level" value="@currLevel">
+            <input type="text" name="codepeg1" id="codepeg1">
+            <input type="text" name="codepeg2" id="codepeg2">
+            <input type="text" name="codepeg3" id="codepeg3">
+            <input type="text" name="codepeg4" id="codepeg4">
+        </form>
+    </div>
+}
+
 
 
 @section Scripts{
@@ -200,6 +207,14 @@
         }
         function checkandsubmit() {
             document.getElementById("codeform").submit();
+        }
+         function YNconfirm(el, ev) {
+            var confirm = window.confirm("This will discard current game and create and new game. Are you sure you want to continue ?");
+            if (confirm) {
+                window.location.href = el.getAttribute("href");
+            } else {
+                ev.preventDefault();
+            }
         }
 
     </script>
