reposive styling added

--- a/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
+++ b/MasterMind/MasterMind.WebApp/wwwroot/css/site.css
@@ -215,3 +215,51 @@ body {
     padding: 20px;
     z-index: 5;
 }
+
+.levelblinker {
+    width: 60px;
+    text-align: center;
+}
+
+@media only screen and (max-width: 820px) {
+    .siteheader {
+        font-size: 20px;
+    }
+
+    .btn {
+        font-size: 14px;
+    }
+
+    .helptext {
+        font-size: 12px;
+    }
+
+    .gamemessagecontaine {
+        font-size: 24px;
+    }
+
+    .levelindicator {
+        font-size: 20px;
+    }
+
+    .levelblinker {
+        width: 30px;
+    }
+
+    .dot, .dotInactive, .dotWhite, .dotPurple, .dotYellow, .dotGreen, .dotRed, .dotBlue {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-left: 5px;
+    }
+
+    .dotKey, .dotKeyWhite, .dotKeyBlack {
+        height: 5px;
+        width: 5px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-right: 2px;
+        margin-left: 2px;
+    }
+}
