--- a/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
+++ b/MasterMind/MasterMind.WebApp/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
                         (i == currLevel && completed))
                     {
                         <tr class="gametablerow">
-                            <td style="width: 60px; text-align: center;">
+                            <td class="levelblinker">
                             </td>
                             <td style="width:30px; text-align: center;">
                                 <span class="levelindicator">@i</span>
@@ -93,7 +93,7 @@
                     else if (i == currLevel && !completed)
                     {
                         <tr class="gametablerow">
-                            <td style="width: 60px; text-align: center;">
+                            <td class="levelblinker">
                                 <span class="levelindicator animated flash infinite">*</span>
                             </td>
                             <td style="width:30px; text-align: center;">
@@ -116,7 +116,7 @@
                     else
                     {
                         <tr class="gametablerow">
-                            <td style="width: 60px; text-align: center;">
+                            <td class="levelblinker">
                             </td>
                             <td style="width:30px; text-align: center;">
                                 <span class="levelindicator">@i</span>
